Replaced get(0) to getFirst